# agentpolicylayer

./: CODEOWNERS  LICENSE  MEDIUM.md  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
apl/: __init__.py  cli.py  declarative.py  instrument.py  layer.py  logging.py  server.py  templates.py  types.py
apl/adapters/: __init__.py  base_adapter.py  langgraph.py
apl/cli/: __init__.py
apl/composition/: __init__.py  verdict_composer.py
apl/declarative_engine/: __init__.py  condition_evaluator.py  object_traversal.py  rule_evaluator.py  schema.py  template_renderer.py  yaml_policy_loader.py  yaml_policy_validator.py
apl/instrumentation/: __init__.py  state.py
apl/layer/: __init__.py  decorator_evaluator.py  event_builder.py  exceptions.py  policy_client.py  policy_layer.py
apl/metrics/: __init__.py  prometheus_exporter.py  server_metrics.py
apl/serialization/: __init__.py  event_serializer.py  manifest_serializer.py  message_serializer.py  metadata_serializer.py  payload_serializer.py  verdict_serializer.py
apl/server/: __init__.py  handler_invoker.py  (+5 more)
demo/: tools.py
examples/: budget_limiter.py  compliance.yaml  confirm_destructive.py  pii_filter.py  usage_demo.py
tests/: conftest.py  test_composition.py  test_core.py  test_declarative_engine.py  test_event_hooks.py  test_example_policies.py  test_imports.py  test_instrumentation.py  test_integration.py  test_layer.py  test_messages.py  test_metrics_and_logging.py  test_provider_instrumentation.py  test_serialization.py  test_server.py  test_types.py  test_watsonx.py
(+122 files in other folders)
